@@ -17,8 +17,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <slf4j.version>1.7.21</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <json.org.version>20160810</json.org.version>
         <commons-compress.version>1.12</commons-compress.version>
+        <jackson.version>2.8.4</jackson.version>
 
         <org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width>4</org-netbeans-modules-editor-indent.CodeStyle.project.indent-shift-width>
         <org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab>4</org-netbeans-modules-editor-indent.CodeStyle.project.spaces-per-tab>
@@ -76,6 +76,7 @@
     <modules>
         <module>core</module>
         <module>reader-osm</module>
+        <module>reader-gtfs</module>
         <module>reader-json</module>
         <module>tools</module>
         <module>web</module>
@@ -300,7 +301,7 @@
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <configuration>
                             <systemPropertyVariables />
-                            <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
+                            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -308,12 +309,9 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.19.1</version>
                         <configuration>
-                            <!-- Without the add-exports/addExports options we get
-                                 java.lang.reflect.InaccessibleObjectException: Unable to make member of class 
-                                 jdk.internal.ref.Cleaner accessible: module java.base does not export jdk.internal.ref to unnamed module @bd8be5
-                                 See #852                                 
+                            <!-- See #852 and #701 for the add exports or add opens option
                             -->                            
-                            <argLine>-Xmx100m -Xms100m --add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine>
+                            <argLine>-Xmx100m -Xms100m --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                         </configuration>
                     </plugin>
                 </plugins>
